@@ -41,7 +41,7 @@ const brush = (colorName, str) => {
   return `\x1b[38;5;${color}m${str}\x1b[0m`;
 }
 
-const reportAction = (ctx, pathJson, filename) => {
+const reportAction = (ctx, pathJson, filename, action) => {
   const currTime = new Date().toLocaleString(ctx.locales, {
     timeStyle: 'medium',
   });
@@ -51,9 +51,14 @@ const reportAction = (ctx, pathJson, filename) => {
     .replace(APP_PATH, '.')
     .replace(filename, brush('cyan', filename));
 
+  if (action === 'Cached') {
+    action = brush('grey', action);
+  }
+
   const message = Util.format(
-    '[%s] Loaded %s%s',
+    '[%s] %s %s%s',
     coloredCurrentTime,
+    action,
     coloredRelativePath,
     BREAK_LINE
   );
@@ -77,33 +82,40 @@ const loadImportsRecursively = async (options) => {
   const { report, pathData } = ctx;
 
   if (idx < imports.length) {
+    let action = 'Cached';
+
     const jsonRelativePath = imports[idx] + '.json';
     const jsonFullPath = Path.join(pathData, 'imports', jsonRelativePath);
     const jsonFilename = Path.basename(jsonFullPath, '.json');
+    const cacheKey = 'imports:' + jsonFullPath.replace(APP_PATH, '');
 
     if (!jsonFullPath.startsWith(APP_PATH)) {
       reject(new Error(ERR_TOP_DIR));
       return;
     }
 
-    try {
+    if (!CachedData.hasOwnProperty(cacheKey)) {
+      try {
 
-      const jsonData = await Fs.promises.readFile(jsonFullPath, 'utf8');
-      const parsedData = JSON.parse(jsonData);
+        const jsonData = await Fs.promises.readFile(jsonFullPath, 'utf8');
 
-      Object.defineProperty(storage, jsonFilename, {
-        value: parsedData,
-        enumerable: true
-      });
+        CachedData[cacheKey] = JSON.parse(jsonData);
+        action = 'Loaded';
 
-    } catch (error) {
+      } catch (error) {
 
-      reject(error);
-      return;
+        reject(error);
+        return;
 
+      }
     }
 
-    report && reportAction(ctx, jsonFullPath, jsonFilename);
+    report && reportAction(ctx, jsonFullPath, jsonFilename, action);
+
+    Object.defineProperty(storage, jsonFilename, {
+      value: CachedData[cacheKey],
+      enumerable: true
+    });
 
     options.idx = idx + 1;
     loadImportsRecursively(options);
@@ -120,12 +132,14 @@ async function loadJsonData(file) {
     .replace(pathHtml, `${pathData}/pages`)
     .slice(0, -3) + 'json';
 
+  const cacheKey = 'data:' + pathJson.replace(APP_PATH, '');
+
   const filename = Path.basename(file.path, '.pug');
   const pocket = { filename };
 
   if (CachedData.hasOwnProperty(pathJson)) {
-    report && reportAction(this, pathJson, filename);
-    return CachedData[pathJson];
+    report && reportAction(this, pathJson, filename, 'Cached');
+    return CachedData[cacheKey];
   }
 
   let jsonData = '';
@@ -137,7 +151,7 @@ async function loadJsonData(file) {
     return pocket;
   }
 
-  report && reportAction(this, pathJson, filename);
+  report && reportAction(this, pathJson, filename, 'Loaded');
 
   if (jsonData.hasOwnProperty('imports')) {
     const { data = {}, imports = [] } = jsonData;
@@ -166,7 +180,7 @@ async function loadJsonData(file) {
     });
   }
 
-  CachedData[pathJson] = pocket;
+  CachedData[cacheKey] = pocket;
 
   return pocket;
 }
